--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,12 @@
 requires = ["setuptools>=65.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.packages]
+find = {namespaces = false}
+
 [project]
 name = "logistro"
 description = "Custom logging module with human-readable and structured formats."
 readme = "README.md"
 requires-python = ">=3.9"
 version = "0.0.1a"
-
-[tool.setuptools.packages.find]
-where = ["logistro"]
