Improve the dynamic of the python version in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,4 +10,4 @@ name = "logistro"
 description = "Custom logging module with human-readable and structured formats."
 readme = "README.md"
 requires-python = ">=3.9"
-version = "0.0.1a"
+dynamic = ["version"]
