--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,26 @@
 [build-system]
-requires = ["setuptools>=65.0.0", "wheel"]
+requires = ["setuptools>=65.0.0", "wheel", "setuptools-git-versioning"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages]
 find = {namespaces = false}
 
+[tool.setuptools-git-versioning]
+enabled = true
+
 [project]
 name = "logistro"
-description = "Custom logging module with human-readable and structured formats."
+description = "Simple wrapper over logging for a couple basic features"
 readme = "README.md"
 requires-python = ">=3.9"
 dynamic = ["version"]
+authors = [
+  {name = "Andrew Pikul", email="ajpikul@gmail.com"},
+  {name = "Neyberson Atencio", email="neyberatencio@gmail.com"}
+  ]
+maintainers = [
+  {name = "Andrew Pikul", email = "ajpikul@gmail.com"},
+]
 
 [project.optional-dependencies]
 dev = ["pytest"]
