--- a/.github/workflows/publish_testpypi.yml
+++ b/.github/workflows/publish_testpypi.yml
@@ -20,7 +20,7 @@ jobs:
       - run: git checkout ${{ github.ref_name }}
       - run: uv python install ${{ matrix.python_v }}
       # don't modify sync file! messes up version!
-      - run: uv sync --frozen --all-extras
+      - run: uv sync --frozen --all-extras --dev
       - run: uv build
       - name: Reinstall from wheel
         run: >
