--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
           python-version-file: "pyproject.toml"
 
       - name: Install logistro
-        run:  uv sync --all-extras
+        run:  uv sync --all-extras --dev
 
       - name: Test
         if: ${{ ! runner.debug }}
