--- a/.github/workflows/publish_testpypi.yml
+++ b/.github/workflows/publish_testpypi.yml
@@ -24,7 +24,7 @@ jobs:
       - run: uv build
       - name: Reinstall from wheel
         run: >
-          uv pip install dist/choreographer-$(uv
+          uv pip install dist/logistro-$(uv
           run --no-sync --with setuptools-git-versioning
           setuptools-git-versioning)-py3-none-any.whl
 
