--- a/.github/workflows/publish_testpypi.yml
+++ b/.github/workflows/publish_testpypi.yml
@@ -20,7 +20,7 @@ jobs:
       - run: git checkout ${{ github.ref_name }}
       - run: uv python install ${{ matrix.python_v }}
       # don't modify sync file! messes up version!
-      - run: uv sync --all-extras --dev --frozen
+      - run: uv sync --all-extras --dev --frozen # ah order here matters?
       - run: uv build
       - name: Reinstall from wheel
         run: >
@@ -29,7 +29,7 @@ jobs:
           setuptools-git-versioning)-py3-none-any.whl
 
       - name: Test
-        run: uv pip freeze && uv run --no-sync poe test
+        run: uv run --no-sync poe test
         timeout-minutes: 8
 
       - name: Test (Debug)
