--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,8 @@ nav:
         "src": "../TECH_NOTE.md",
         "replace": {"src='docs/": "src='"}
       }
-  - API: >-
+  - API:
+      - >-
         {
           "api": "logistro",
           "tree": "imports"
