--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ dev = [
     "pytest>=8.3.4",
 ]
 docs = [
-#    "mkquixote @ git+ssh://git@github.com/geopozo/mkquixote",
+    "mkquixote @ git+ssh://git@github.com/geopozo/mkquixote",
     "mkdocs>=1.6.1",
     "mkdocs-material>=9.5.49",
 ]
