Add final publish workflow

--- a/.github/workflows/publish_all.yml
+++ b/.github/workflows/publish_all.yml
@@ -126,3 +126,27 @@ jobs:
           gh release upload
           "$GITHUB_REF_NAME" dist/**
           --repo "$GITHUB_REPOSITORY"
+  publish-to-pypi:
+    name: >-
+      Publish Python 🐍 distribution 📦 to PyPI
+    needs:
+      - super-test
+      - store-build
+      - publish-to-testpypi
+      - github-release
+    if: always() && !cancelled() && !failure()
+    runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/logistro
+    # Signs this workflow so pypi trusts it
+    permissions:
+      id-token: write
+    steps:
+      - name: Download the dists
+        uses: actions/download-artifact@v4
+        with:
+          name: python-package-distributions
+          path: dist/
+      - name: Push to PyPi
+        uses: pypa/gh-action-pypi-publish@release/v1
