--- a/.github/workflows/publish_all.yml
+++ b/.github/workflows/publish_all.yml
@@ -19,6 +19,7 @@ jobs:
       # must actually checkout for version determination
       - run: git checkout ${{ github.ref_name }}
       - run: uv python install ${{ matrix.python_v }}
+      - run: uv python pin ${{ matrix.python_v }}
       # don't modify sync file! messes up version!
       - run: uv sync --all-extras --dev --frozen # ah order here matters?
       - run: uv build
