--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=65.0.0", "wheel", "setuptools-git-versioning"]
+requires = ["setuptools", "wheel", "setuptools-git-versioning"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages]
@@ -13,6 +13,7 @@ name = "logistro"
 description = "Simple wrapper over logging for a couple basic features"
 dynamic = ["version"]
 readme = "README.md"
+license = { "file" = "LICENSE" }
 requires-python = ">=3.8"
 authors = [
   {name = "Andrew Pikul", email="ajpikul@gmail.com"},
